# RustyFuzz

./: .gitattributes  .gitignore  BUILD_SUMMARY.md  Cargo.toml  FIXES_SUMMARY.md  PHASE_1_SUMMARY.md  PHASE_2_SUMMARY.md  PHASE_3_SUMMARY.md  README.MD  README.md  config.toml.example  formal_spec_example.toml
.github/workflows/: ci.yml  rust.yml
audits/coinbase-cantina/: out_of_scope_rules.json  priority_queue.md  scope.json  scope.md  target_inventory.csv
audits/coinbase-cantina/campaigns/: snapshot-scheduling.md
audits/coinbase-cantina/foundry/: foundry.toml
audits/coinbase-cantina/foundry/lib/forge-std/src/: Test.sol
audits/coinbase-cantina/foundry/test/: NegativeControls.t.sol  SpendPermissionFork.t.sol  SpendPermissionInvariant.t.sol  SpendPermissionPeriod.t.sol  SpendPermissionSignature.t.sol  SpendPermissionTestBase.sol  SpendRouter.t.sol
audits/coinbase-cantina/logs/: environment.md
audits/coinbase-cantina/seeds/spend-permissions/: basescan_seed_corpus.csv  basescan_seed_corpus.json
audits/coinbase-cantina/targets/base/spend-permissions/: accounting-model.md  audit-status.md  authorization-matrix.csv  callgraph.md  deployment-verification.md  external-calls.md  invariants.md  metadata.json  review-notes.md  signature-domain.md  state-machine.md  storage-map.md  threat-hypotheses.md  threat-model.md
audits/coinbase-cantina/targets/base/spend-permissions/abi/: PublicERC6492Validator.json  SpendPermissionManager.json  SpendRouter.json
audits/coinbase-cantina/targets/base/spend-permissions/bytecode/: PublicERC6492Validator.runtime.hex  SpendPermissionManager.runtime.hex  SpendRouter.runtime.hex
audits/coinbase-cantina/targets/base/spend-permissions/logs/: PublicERC6492Validator.basescan.html  SpendPermissionManager.basescan.html  SpendRouter.basescan.html
benchmarks/blind/: audius-governance-reinitialization-2022.toml  euler-finance-donate-liquidation-2023.toml
benchmarks/blind/fixtures/: audius-governance-reinitialization-2022.json  euler-finance-donate-liquidation-2023.json
benchmarks/daedaluzz/fixtures/: StopContract.json
benchmarks/historical/: audius-governance-reinitialization-2022.toml  euler-finance-donate-liquidation-2023.toml
benchmarks/historical/fixtures/: audius-governance-reinitialization-2022.json  euler-finance-donate-liquidation-2023.json
benchmarks/historical/known_vulnerable/: known-bridge-nonce-replay.toml  known-erc20-bad-mint-inflation.toml  known-flashloan-price-manipulation.toml  known-read-only-reentrancy.toml  known-uninitialized-proxy-takeover.toml
benchmarks/historical/known_vulnerable/fixtures/: known-bridge-nonce-replay.json  known-erc20-bad-mint-inflation.json  known-flashloan-price-manipulation.json  known-read-only-reentrancy.json  known-uninitialized-proxy-takeover.json
benchmarks/live/: access-control-live.toml  amm-reserve-manipulation-live.toml  oracle-stale-price-live.toml
benchmarks/live/fixtures/: access-control-live.json  amm-reserve-manipulation-live.json  oracle-stale-price-live.json
docs/: ALGORITHMS.md  COMPARISON.md  CONFIGURATION.md  IMPLEMENTATION_STATUS.md  SATORI.md  architecture.md  benchmarking.md  engineering-status.md  finding-lifecycle.md  oracle-design.md  proof-model.md  snapshot-scoring.md
docs/adr/: 001-evm-first-architecture.md  002-libafl-integration.md  003-fork-based-execution.md  004-oracle-based-detection.md
prompts/satori/: function_audit.md  invariant_mining.md  repo_model.md  report.md  rustyfuzz_job.md  system.md  validation_review.md
reports/: satori_baseline.md
satori/: README.md  config.example.toml
src/: config.rs  error.rs  lib.rs  main.rs
src/chain/: interface.rs  mempool.rs  mod.rs
src/common/: mod.rs  notifier.rs  oracle.rs  report.rs  types.rs  verifier.rs
src/common/oracle/: defi.rs  governance.rs  mev.rs  mod.rs  packs.rs  protocol_invariants.rs  security.rs  svm.rs
src/engine/: abi_ingest.rs  actors.rs  benchmark.rs  bounded_search.rs  bytecode_analysis.rs  concolic.rs  confirmation.rs  control_flow.rs  corpus_minimizer.rs  dependency.rs  economic_delta.rs  exploit_coverage.rs  exploit_path.rs  exploit_synthesizer.rs  flashloan.rs  fork_setup.rs  formal_spec.rs  foundry_ingest.rs  fuzz_engine.rs  invariant_manifest.rs  libafl_integration.rs  minimizer.rs  mitigation.rs  mod.rs  ordering_mutations.rs  permission_model.rs  promotion.rs  proof.rs  protocol_model.rs  report.rs  scheduler.rs  scoring.rs  seed_intelligence.rs  state_machine.rs  state_machine_inference.rs  state_transition_checker.rs  target_profile.rs  temporal_constraints.rs
src/evm/: abi_mutator.rs  corpus.rs  dataflow.rs  economic.rs  economic_views.rs  erc20_discovery.rs  etherscan_abi_fetcher.rs  executor.rs  feedback.rs  fork.rs  fork_db.rs  fuzz.rs  inspector.rs  interface.rs  mod.rs  registry.rs  seed_ingester.rs  sgx_executor.rs  snapshot.rs  trace.rs
src/hybrid/: concolic.rs  differential.rs  llm_guidance.rs  mod.rs  taint.rs
src/oracles/: economic.rs  mod.rs
src/satori/: budget.rs  cache.rs  cli.rs  config.rs  error.rs  fsutil.rs  mod.rs  pipeline.rs  types.rs
src/satori/analysis/: ast.rs  criticality.rs  detectors.rs  foundry.rs  mod.rs  slither.rs  storage.rs
src/satori/graph/: builder.rs  mod.rs  model.rs  query.rs
src/satori/ingest/: docs.rs  foundry.rs  hardhat.rs  mod.rs  project.rs
src/satori/jobs/: foundry_poc.rs  mod.rs  rustyfuzz_job.rs
src/satori/memory/: bug_class.rs  false_positive.rs  jsonl.rs  mod.rs  store.rs
src/satori/packets/: function_packet.rs  mod.rs  repo_packet.rs  validation_packet.rs
src/satori/reasoning/: mod.rs  o3_client.rs  parser.rs  prompts.rs  schemas.rs
src/satori/report/: json.rs  markdown.rs  mod.rs  summary.rs
src/satori/validation/: foundry_runner.rs  mod.rs  runner.rs  rustyfuzz_runner.rs  verdict.rs
src/sgx/: mod.rs
src/svm/: bridge.rs  diff.rs  executor.rs  fuzz.rs  inspector.rs  mod.rs  snapshot.rs
tests/: benchmarks.rs  ci.yml  end_to_end_smoke.rs
tests/fixtures/satori/: erc4626_naive.sol  erc4626_virtual_offset.sol  oracle_lending.sol  upgradeable_unprotected.sol
(+4 files in other folders)
