[package]
name = "rusty-fuzz"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "1", features = ["full"] }

revm = { version = "25", default-features = false, features = ["std", "serde", "memory_limit", "secp256k1", "portable"] }

libafl = "0.13.2"
libafl_bolts = "0.13.2"

tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
clap = { version = "4.6", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
postcard = { version = "1.1", features = ["use-std"] }
toml = "0.8"

anyhow = "1.0"
rand = "0.8"
bitvec = "1.0"
dashmap = "6.0"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"

hashlink = "0.9"
rayon = "1.10"
borsh = { version = "1.5", features = ["derive"] }
solana-sdk = "2.1.0"
solana-client = "2.1.0"
solana-rpc-client-api = "2.1.0"
mollusk-svm = "0.0.10"
aes-gcm-siv = { version = "0.11", optional = true }
sgx_types = { version = "1.1.2", optional = true }
sha2 = "0.10" # Added for SVM differential fuzzer
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"], optional = true }
alloy-json-abi = { version = "0.3", optional = true }

z3 = { version = "0.12", optional = true }

[features]
default = ["notifier"]
z3 = ["dep:z3"]
llm = ["dep:reqwest"]
notifier = ["dep:reqwest"]
sgx = ["dep:sgx_types", "dep:aes-gcm-siv"] # Note: Requires SGX SDK environment for compilation
etherscan = ["dep:reqwest", "dep:alloy-json-abi"]
