[package]
name = "rusty-fuzz"
version = "0.1.0"
edition = "2021"

# ─────────────────────────────────────────────────────────────────────────────
# FEATURES
# Build EVM only (default):   cargo build --release
# Build SVM only:             cargo build --release --features svm --no-default-features
# Build with Z3 solver:       cargo build --release --features "evm,z3"
# Build with notifications:   cargo build --release --features "evm,notifier"
# ─────────────────────────────────────────────────────────────────────────────
[features]
default  = ["evm"]
evm      = ["dep:revm", "dep:alloy-dyn-abi", "dep:alloy-primitives", "dep:alloy-provider",
             "dep:alloy-json-abi", "dep:alloy-sol-types", "dep:alloy-rpc-types-eth",
             "dep:alloy-consensus", "dep:alloy-network", "dep:alloy-eips"]
svm      = ["dep:solana-sdk", "dep:solana-client", "dep:solana-rpc-client-api",
             "dep:mollusk-svm", "dep:borsh"]
z3       = ["dep:z3"]
llm      = ["dep:reqwest"]
notifier = ["dep:reqwest"]

# ─────────────────────────────────────────────────────────────────────────────
# FUZZING CORE
# ─────────────────────────────────────────────────────────────────────────────
[dependencies]
libafl       = "0.13.2"
libafl_bolts = "0.13.2"

# ─────────────────────────────────────────────────────────────────────────────
# EVM STACK  (feature = "evm")
#
# Using [dependencies.X] table syntax — valid TOML 1.0.
# Inline { } multi-line tables are TOML 1.1 only. Cargo uses TOML 1.0.
#
# revm 25.0.0 confirmed features (verified from crates.io):
#   std, serde, memory_limit, secp256k1, portable — all exist.
# revm default features include: secp256k1, portable, c-kzg, blst, tracer.
# With default-features = false we disable all, then re-add only what we need.
# Omitting c-kzg and blst removes heavy C deps. Add back if you need EIP-4844.
# ─────────────────────────────────────────────────────────────────────────────
[dependencies.revm]
version          = "25"
default-features = false
features         = ["std", "serde", "memory_limit", "secp256k1", "portable"]
optional         = true

[dependencies.alloy-dyn-abi]
version  = "1"
optional = true

[dependencies.alloy-primitives]
version  = "1"
optional = true

[dependencies.alloy-provider]
version          = "1"
default-features = false
features         = ["reqwest"]
optional         = true

[dependencies.alloy-json-abi]
version  = "1"
optional = true

[dependencies.alloy-sol-types]
version  = "1"
optional = true

[dependencies.alloy-rpc-types-eth]
version  = "1"
optional = true

[dependencies.alloy-consensus]
version  = "1"
optional = true

[dependencies.alloy-network]
version  = "1"
optional = true

[dependencies.alloy-eips]
version  = "1"
optional = true

# ─────────────────────────────────────────────────────────────────────────────
# SVM STACK  (feature = "svm")
# Exact-pinned to =2.0.18 — mollusk-svm 0.0.10 was published against 2.0.x.
# DO NOT enable evm + svm in the same binary.
# ─────────────────────────────────────────────────────────────────────────────
[dependencies.solana-sdk]
version  = "=2.0.18"
optional = true

[dependencies.solana-client]
version  = "=2.0.18"
optional = true

[dependencies.solana-rpc-client-api]
version  = "=2.0.18"
optional = true

[dependencies.mollusk-svm]
version  = "0.0.10"
optional = true

[dependencies.borsh]
version  = "1"
features = ["derive"]
optional = true

# ─────────────────────────────────────────────────────────────────────────────
# ASYNC RUNTIME
# ─────────────────────────────────────────────────────────────────────────────
[dependencies.tokio]
version  = "1"
features = ["full"]

[dependencies.async-trait]
version = "0.1"

# ─────────────────────────────────────────────────────────────────────────────
# CLI  — clap "4.6" does not exist. "4" resolves to latest 4.x safely.
# ─────────────────────────────────────────────────────────────────────────────
[dependencies.clap]
version  = "4"
features = ["derive"]

# ─────────────────────────────────────────────────────────────────────────────
# LOGGING
# ─────────────────────────────────────────────────────────────────────────────
[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version  = "0.3"
features = ["env-filter"]

# ─────────────────────────────────────────────────────────────────────────────
# SERIALIZATION
# Removed bincode — redundant with postcard.
# ─────────────────────────────────────────────────────────────────────────────
[dependencies.serde]
version  = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.postcard]
version  = "1"
features = ["use-std"]

[dependencies.toml]
version = "0.8"

# ─────────────────────────────────────────────────────────────────────────────
# CORE UTILITIES
# rand at 0.8 matches LibAFL 0.13.2. Upgrade to 0.9 with LibAFL 0.15.x only.
# ─────────────────────────────────────────────────────────────────────────────
[dependencies.anyhow]
version = "1"

[dependencies.rand]
version = "0.8"

[dependencies.bitvec]
version = "1"

[dependencies.dashmap]
version = "5"

[dependencies.parking_lot]
version = "0.12"

[dependencies.chrono]
version  = "0.4"
features = ["serde"]

[dependencies.url]
version = "2"

[dependencies.hashlink]
version = "0.9"

[dependencies.rayon]
version = "1"

# ─────────────────────────────────────────────────────────────────────────────
# CRYPTO
# ─────────────────────────────────────────────────────────────────────────────
[dependencies.sha2]
version = "0.10"

[dependencies.dotenvy]
version = "0.15"

# ─────────────────────────────────────────────────────────────────────────────
# OPTIONAL: Z3 concolic solver
#   Linux:  sudo apt install libz3-dev
#   macOS:  brew install z3
# ─────────────────────────────────────────────────────────────────────────────
[dependencies.z3]
version  = "0.12"
optional = true

# ─────────────────────────────────────────────────────────────────────────────
# OPTIONAL: HTTP client (notifications + LLM API)
# ─────────────────────────────────────────────────────────────────────────────
[dependencies.reqwest]
version  = "0.12"
features = ["json"]
optional = true