[package]
name = "rusty-fuzz"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

# ─────────────────────────────────────────────────────────────────────────────
# FEATURES
# Build EVM only (default):   cargo build --release
# SVM/SGX:                    unsupported; feature flags emit controlled errors
# Build with Z3 solver:       cargo build --release --features "evm,z3"
# Build with notifications:   cargo build --release --features "evm,notifier"
# ─────────────────────────────────────────────────────────────────────────────
[features]
default  = ["evm"]
evm      = [
    "dep:revm",
    "dep:alloy",
    "dep:alloy-dyn-abi",
    "dep:alloy-primitives",
    "dep:alloy-json-abi",
    "dep:reqwest"
]
svm      = ["dep:solana-sdk", "dep:solana-client", "dep:solana-rpc-client-api",
             "dep:mollusk-svm", "dep:borsh"]
z3       = ["dep:z3"]
llm      = ["dep:reqwest"]
notifier = ["dep:reqwest"]
sgx      = []

# ─────────────────────────────────────────────────────────────────────────────
# FUZZING CORE
# ─────────────────────────────────────────────────────────────────────────────
[dependencies]
libafl       = { version = "0.15.4", features = ["prelude"] }
libafl_bolts = { version = "0.15.4", features = ["prelude"] }
log          = "0.4.29"
hex          = "0.4.3"

# ─────────────────────────────────────────────────────────────────────────────
# EVM STACK  (feature = "evm")
# ─────────────────────────────────────────────────────────────────────────────
[dependencies.revm]
version          = "38.0.0"
default-features = false
features         = ["std", "serde", "memory_limit", "secp256k1", "portable"]
optional         = true

[dependencies.alloy]
version          = "2.0.4"
default-features = false
features         = [
    "providers",
    "rpc-types-eth",
    "network",
    "consensus",
    "eips",
    "rpc-client",
    "reqwest"
]
optional         = true

[dependencies.alloy-dyn-abi]
version  = "1.5.7"
optional = true

[dependencies.alloy-primitives]
version  = "1.5.7"
optional = true

[dependencies.alloy-json-abi]
version  = "1.5.7"
optional = true

# ─────────────────────────────────────────────────────────────────────────────
# SVM STACK  (unsupported)
# Dependencies remain optional for future reconstruction, but the crate root
# currently emits a controlled compile error when `svm` is enabled.
# ─────────────────────────────────────────────────────────────────────────────
[dependencies.solana-sdk]
version  = "^4.0.1"
optional = true

[dependencies.solana-client]
version  = "^3.1.14"
optional = true

[dependencies.solana-rpc-client-api]
version  = "^3.1.14"
optional = true

[dependencies.mollusk-svm]
version  = "0.12.1-agave-4.0"
optional = true

[dependencies.borsh]
version  = "1.6.1"
features = ["derive"]
optional = true

# ─────────────────────────────────────────────────────────────────────────────
# ASYNC RUNTIME
# ─────────────────────────────────────────────────────────────────────────────
[dependencies.tokio]
version  = "1.52.3"
features = ["full"]

[dependencies.async-trait]
version = "0.1.89"

# ─────────────────────────────────────────────────────────────────────────────
# CLI
# ─────────────────────────────────────────────────────────────────────────────
[dependencies.clap]
version  = "4.6.1"
features = ["derive"]

# ─────────────────────────────────────────────────────────────────────────────
# LOGGING
# ─────────────────────────────────────────────────────────────────────────────
[dependencies.tracing]
version = "0.1.44"

[dependencies.tracing-subscriber]
version  = "0.3.23"
features = ["env-filter"]

# ─────────────────────────────────────────────────────────────────────────────
# SERIALIZATION
# ─────────────────────────────────────────────────────────────────────────────
[dependencies.serde]
version  = "1.0.228"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.149"

[dependencies.postcard]
version  = "1.1.3"
features = ["use-std"]

[dependencies.toml]
version = "1.1.2"

# ─────────────────────────────────────────────────────────────────────────────
# CORE UTILITIES
# rand at 0.8 matches LibAFL 0.13.2. Upgrade to 0.9 with LibAFL 0.15.x only.
# ─────────────────────────────────────────────────────────────────────────────


[dependencies.anyhow]
version = "1.0.102"

[dependencies.bincode]
version = "2.0.0"


[dependencies.rand]
version = "0.10.1"

[dependencies.bitvec]
version = "1.0.1"

[dependencies.dashmap]
version = "6.1.0"

[dependencies.parking_lot]
version = "0.12.5"

[dependencies.chrono]
version  = "0.4.44"
features = ["serde"]

[dependencies.url]
version = "2.5.8"

[dependencies.hashlink]
version = "0.11.0"

[dependencies.rayon]
version = "1.12.0"

# ─────────────────────────────────────────────────────────────────────────────
# CRYPTO
# ─────────────────────────────────────────────────────────────────────────────
[dependencies.sha2]
version = "0.11.0"

[dependencies.dotenvy]
version = "0.15.7"

# ─────────────────────────────────────────────────────────────────────────────
# OPTIONAL: Z3 concolic solver
#   Linux:  sudo apt install libz3-dev
#   macOS:  brew install z3
# ─────────────────────────────────────────────────────────────────────────────
[dependencies.z3]
version  = "0.20.0"
optional = true

# ─────────────────────────────────────────────────────────────────────────────
# OPTIONAL: HTTP client (notifications + LLM API)
# ─────────────────────────────────────────────────────────────────────────────
[dependencies.reqwest]
version  = "0.13.3"
features = ["json", "blocking"]
optional = true
